// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`product renders configurable product with options 1`] = `
<li>
  <span />
  <div>
    <div>
      <Image
        alt=""
        classes={
          Object {
            "image": undefined,
            "root": undefined,
          }
        }
        resource={Object {}}
        width={100}
      />
    </div>
    <div>
      <div>
        <div>
          
        </div>
      </div>
      <dl>
        <div>
          <dt>
            Option 1 :
          </dt>
          <dd>
            Value 1
          </dd>
        </div>
        <div>
          <dt>
            Option 2 :
          </dt>
          <dd>
            Value 2
          </dd>
        </div>
      </dl>
      <span>
        <span>
          $
        </span>
        <span>
          1
        </span>
        <span>
          .
        </span>
        <span>
          00
        </span>
         ea.
      </span>
      <span>
        
      </span>
      <div>
        <form
          onKeyDown={[Function]}
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div>
            <label
              htmlFor="123"
            >
              Quantity
            </label>
            <button
              aria-label="Decrease Quantity"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span>
                <svg
                  fill="none"
                  height={22}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width={22}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="5"
                    x2="19"
                    y1="12"
                    y2="12"
                  />
                </svg>
              </span>
            </button>
            <span
              style={
                Object {
                  "--iconsAfter": 0,
                  "--iconsBefore": 0,
                }
              }
            >
              <span>
                <input
                  aria-label="Item Quantity"
                  id="123"
                  inputMode="numeric"
                  min={0}
                  name="quantity"
                  onBlur={[Function]}
                  onChange={[Function]}
                  pattern="[0-9]*"
                  value={1}
                />
              </span>
              <span />
              <span />
            </span>
            <p />
            <button
              aria-label="Increase Quantity"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span>
                <svg
                  fill="none"
                  height={20}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="5"
                    y2="19"
                  />
                  <line
                    x1="5"
                    x2="19"
                    y1="12"
                    y2="12"
                  />
                </svg>
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div>
      <button
        onClick={[Function]}
      >
        <span>
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </span>
      </button>
      <ul>
        <li>
          <button
            onMouseDown={[MockFunction]}
          >
            <span>
              <svg
                fill="none"
                height={16}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"
                />
              </svg>
            </span>
            <span>
              Edit item
            </span>
          </button>
        </li>
        <li>
          <button
            onMouseDown={[MockFunction]}
          >
            <span>
              <svg
                fill="none"
                height={16}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="3 6 5 6 21 6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </span>
            <span>
              Remove from cart
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</li>
`;

exports[`product renders out of stock product 1`] = `
<li>
  <span />
  <div>
    <div>
      <Image
        alt=""
        classes={
          Object {
            "image": undefined,
            "root": undefined,
          }
        }
        resource={Object {}}
        width={100}
      />
    </div>
    <div>
      <div>
        <div>
          
        </div>
      </div>
      <span>
        <span>
          $
        </span>
        <span>
          55
        </span>
        <span>
          .
        </span>
        <span>
          00
        </span>
         ea.
      </span>
      <span>
        Out-of-stock
      </span>
      <div>
        <form
          onKeyDown={[Function]}
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div>
            <label
              htmlFor="123"
            >
              Quantity
            </label>
            <button
              aria-label="Decrease Quantity"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span>
                <svg
                  fill="none"
                  height={22}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width={22}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="5"
                    x2="19"
                    y1="12"
                    y2="12"
                  />
                </svg>
              </span>
            </button>
            <span
              style={
                Object {
                  "--iconsAfter": 0,
                  "--iconsBefore": 0,
                }
              }
            >
              <span>
                <input
                  aria-label="Item Quantity"
                  id="123"
                  inputMode="numeric"
                  min={0}
                  name="quantity"
                  onBlur={[Function]}
                  onChange={[Function]}
                  pattern="[0-9]*"
                  value={2}
                />
              </span>
              <span />
              <span />
            </span>
            <p />
            <button
              aria-label="Increase Quantity"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span>
                <svg
                  fill="none"
                  height={20}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="5"
                    y2="19"
                  />
                  <line
                    x1="5"
                    x2="19"
                    y1="12"
                    y2="12"
                  />
                </svg>
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div>
      <button
        onClick={[Function]}
      >
        <span>
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </span>
      </button>
      <ul>
        <li>
          <button
            onMouseDown={[MockFunction]}
          >
            <span>
              <svg
                fill="none"
                height={16}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="3 6 5 6 21 6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </span>
            <span>
              Remove from cart
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</li>
`;

exports[`product renders simple product correctly 1`] = `
<li>
  <span />
  <div>
    <div>
      <Image
        alt=""
        classes={
          Object {
            "image": undefined,
            "root": undefined,
          }
        }
        resource={Object {}}
        width={100}
      />
    </div>
    <div>
      <div>
        <div>
          
        </div>
      </div>
      <span>
        <span>
          $
        </span>
        <span>
          1
        </span>
        <span>
          .
        </span>
        <span>
          00
        </span>
         ea.
      </span>
      <span>
        
      </span>
      <div>
        <form
          onKeyDown={[Function]}
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div>
            <label
              htmlFor="123"
            >
              Quantity
            </label>
            <button
              aria-label="Decrease Quantity"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span>
                <svg
                  fill="none"
                  height={22}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width={22}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="5"
                    x2="19"
                    y1="12"
                    y2="12"
                  />
                </svg>
              </span>
            </button>
            <span
              style={
                Object {
                  "--iconsAfter": 0,
                  "--iconsBefore": 0,
                }
              }
            >
              <span>
                <input
                  aria-label="Item Quantity"
                  id="123"
                  inputMode="numeric"
                  min={0}
                  name="quantity"
                  onBlur={[Function]}
                  onChange={[Function]}
                  pattern="[0-9]*"
                  value={1}
                />
              </span>
              <span />
              <span />
            </span>
            <p />
            <button
              aria-label="Increase Quantity"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <span>
                <svg
                  fill="none"
                  height={20}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="5"
                    y2="19"
                  />
                  <line
                    x1="5"
                    x2="19"
                    y1="12"
                    y2="12"
                  />
                </svg>
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div>
      <button
        onClick={[Function]}
      >
        <span>
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="12"
              cy="5"
              r="1"
            />
            <circle
              cx="12"
              cy="19"
              r="1"
            />
          </svg>
        </span>
      </button>
      <ul>
        <li>
          <button
            onMouseDown={[MockFunction]}
          >
            <span>
              <svg
                fill="none"
                height={16}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="3 6 5 6 21 6"
                />
                <path
                  d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                />
              </svg>
            </span>
            <span>
              Remove from cart
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</li>
`;
